[project]
name = "envertech-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Adrian Rumpold", email = "a.rumpold@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
envertech-logger = "envertech_logger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "homeassistant>=2025.4.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/pv_microinverter"]

[tool.ruff]
src = ["custom_components"]
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
    "C4",
    "PYI",
    "PTH",
    "T10", # prevent stray debug breakpoints
]
ignore = [
    "E501",   # Line too long
    "RUF029", # Unused Async (FastAPI routes are async)
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
